--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -13,6 +13,13 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-consulting.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Mendes Consulting</title>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js">
+    <script type="text/javascript">
+       (function(){
+          emailjs.init("%REACT_APP_EMAILJS_USERID%");
+       })();
+    </script>
   </head>
   <body>
     <noscript>Você precisa habilitar o Javascript para rodar essa página.</noscript>
